--- a/whatsapp-backend/src/main/resources/application.properties
+++ b/whatsapp-backend/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog.yaml
+server.servlet.context-path=/api
+jwt.secret=${JWT_SECRET, 'secret'}
+jwt.expiration=${JWT_EXPIRATION, '3600000'}
