--- a/whatsapp-backend/src/main/resources/application.properties
+++ b/whatsapp-backend/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog.yaml
 server.servlet.context-path=/api
 jwt.secret=${JWT_SECRET, 'secret'}
 jwt.expiration=${JWT_EXPIRATION, '3600000'}
+
+front-end.url=${FRONTEND_URL, 'http://localhost:4200'}
