--- a/whatsapp-backend/src/main/resources/application.properties
+++ b/whatsapp-backend/src/main/resources/application.properties
@@ -11,7 +11,9 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=false
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog.yaml
 server.servlet.context-path=/api
-jwt.secret=${JWT_SECRET, 'secret'}
-jwt.expiration=${JWT_EXPIRATION, '3600000'}
+jwt.secret=${JWT_SECRET:secret}
+jwt.expiration=${JWT_EXPIRATION:3600000}
 
-front-end.url=${FRONTEND_URL, 'http://localhost:4200'}
+front-end.url=${FRONTEND_URL:http://localhost:4200}
+
+spring.profiles.active=${ACTIVE_PROFILE:dev}
