--- a/whatsapp-web/angular.json
+++ b/whatsapp-web/angular.json
@@ -25,7 +25,7 @@
 							}
 						],
 						"styles": ["src/styles.css"],
-						"scripts": []
+						"scripts": ["src/polyfills-global.js"]
 					},
 					"configurations": {
 						"production": {
@@ -84,7 +84,7 @@
 							}
 						],
 						"styles": ["src/styles.css"],
-						"scripts": []
+						"scripts": ["src/polyfills-global.js"]
 					}
 				}
 			}
