--- a/whatsapp-web/angular.json
+++ b/whatsapp-web/angular.json
@@ -24,7 +24,10 @@
 								"input": "public"
 							}
 						],
-						"styles": ["src/styles.css"],
+						"styles": [
+							"src/styles.css",
+							"node_modules/@ctrl/ngx-emoji-mart/picker.css"
+						],
 						"scripts": ["src/polyfills-global.js"]
 					},
 					"configurations": {
