--- a/whatsapp-web/package.json
+++ b/whatsapp-web/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^19.2.12",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -18,6 +19,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@stomp/stompjs": "^7.1.1",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
