--- a/whatsapp-backend/src/main/resources/application.properties
+++ b/whatsapp-backend/src/main/resources/application.properties
@@ -17,3 +17,7 @@ jwt.expiration=${JWT_EXPIRATION:3600000}
 front-end.url=${FRONTEND_URL:http://localhost:4200}
 
 spring.profiles.active=${ACTIVE_PROFILE:dev}
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+app.storage.base-path=${STORAGE_BASE_PATH:.whatsapp-data}
