--- a/whatsapp-backend/src/main/resources/db/changelog/db.changelog.yaml
+++ b/whatsapp-backend/src/main/resources/db/changelog/db.changelog.yaml
@@ -8,3 +8,9 @@ databaseChangeLog:
     - include:
           relativeToChangelogFile: true
           file: yaml/V003__alter_users_table.yaml
+    - include:
+          relativeToChangelogFile: true
+          file: yaml/V004__alter_conversation_participants_add_is_active.yaml
+    - include:
+          relativeToChangelogFile: true
+          file: yaml/V005__add_cascade_to_conversation_fk.yaml
