style: configure tabs with 4-space width and multi-line formatting
✨ Features:
- Updated Prettier configuration to use tabs with 4-space width
- Configured ESLint with tab width of 4 spaces
- Enhanced HTML formatting with singleAttributePerLine for elements with multiple attributes
- Java formatting already supports multi-line parameters via Google Java Format AOSP variant
- Updated documentation to reflect new tab settings

🔧 Configuration Changes:
- .prettierrc.json: useTabs=true, tabWidth=4 for all file types
- .eslintrc.json: tabWidth=4 in max-len rule
- FORMATTING.md: Updated with current tab configuration
- All formatting scripts work correctly with new settings

✅ Verified:
- Java methods with 3+ parameters format on multiple lines
- HTML elements with multiple attributes format on separate lines
- Consistent 4-space tab width across entire project
- All formatting scripts pass validation
- 200-character line length maintained

--- a/whatsapp-web/.prettierrc.json
+++ b/whatsapp-web/.prettierrc.json
@@ -3,8 +3,8 @@
   "trailingComma": "es5",
   "singleQuote": true,
   "printWidth": 200,
-  "tabWidth": 2,
-  "useTabs": false,
+  "tabWidth": 4,
+  "useTabs": true,
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "endOfLine": "lf",
@@ -20,7 +20,11 @@
       "files": "*.html",
       "options": {
         "parser": "angular",
-        "printWidth": 200
+        "printWidth": 200,
+        "tabWidth": 4,
+        "useTabs": true,
+        "singleAttributePerLine": true,
+        "htmlWhitespaceSensitivity": "ignore"
       }
     },
     {
@@ -28,21 +32,47 @@
       "options": {
         "parser": "angular",
         "printWidth": 200,
-        "htmlWhitespaceSensitivity": "ignore"
+        "tabWidth": 4,
+        "useTabs": true,
+        "htmlWhitespaceSensitivity": "ignore",
+        "singleAttributePerLine": true
+      }
+    },
+    {
+      "files": "*.ts",
+      "options": {
+        "parser": "typescript",
+        "printWidth": 200,
+        "tabWidth": 4,
+        "useTabs": true,
+        "arrowParens": "avoid"
+      }
+    },
+    {
+      "files": "*.js",
+      "options": {
+        "parser": "babel",
+        "printWidth": 200,
+        "tabWidth": 4,
+        "useTabs": true
       }
     },
     {
       "files": "*.scss",
       "options": {
         "printWidth": 200,
-        "singleQuote": false
+        "singleQuote": false,
+        "tabWidth": 4,
+        "useTabs": true
       }
     },
     {
       "files": "*.css",
       "options": {
         "printWidth": 200,
-        "singleQuote": false
+        "singleQuote": false,
+        "tabWidth": 4,
+        "useTabs": true
       }
     }
   ]
